<resources>
    <string name="app_name">Mobile Cash Economy (MCE)</string>

    <string name="bank_prompt">Choose Your Bank</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <!--Bank Accounts Dropdown-->
    <string-array name="bank_arrays">
        <item>Please select...</item>
        <item>First National Bank</item>
        <item>Absa</item>
        <item>Capitec</item>
        <item>Standard Bank</item>
    </string-array>

    <!--Login and Register Forms-->
    <string name="text_accounts">All Accounts</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_register_agent">Register MCE Agent</string>
    <string name="error_message_first_name">Please Enter First Name</string>
    <string name="error_message_last_name">Please Enter Last Name</string>
    <string name="error_message_phone_number">Please Enter Phone Number</string>
    <string name="error_message_email">Please Enter Valid Email</string>
    <string name="error_message_password">Please Enter Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_title">Mobile Cash Economy</string>
    <string name="text_hello">Hello,</string>
    <string name="hint_store_name">Store Name</string>
    <string name="hint_store_reg_number">Store Registration No.</string>
    <string name="hint_store_account_number">Store Account No.</string>
    <string name="hint_store_address">Store Address</string>
    <string name="text_checkbox_terms_cond">I have read and understood the Terms and Conditions</string>


</resources>
